--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "angularfire2": "^4.0.0-rc.1",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^1.1.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-customurlscheme": "^4.3.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-universal-links-plugin": "^1.2.1",
         "firebase": "^4.2.0",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -46,7 +52,6 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
-        "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "ionic": "3.8.1",
         "typescript": "2.3.4"
@@ -62,9 +67,17 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "cordova-plugin-buildinfo": {},
+            "cordova-plugin-browsertab": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "emiel.totrack.app"
+            },
+            "ionic-plugin-keyboard": {},
+            "cordova-universal-links-plugin": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
