--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
         "cordova-universal-links-plugin": "^1.2.1",
         "firebase": "^4.2.0",
         "ionic-angular": "3.6.0",
@@ -74,7 +75,8 @@
                 "URL_SCHEME": "emiel.totrack.app"
             },
             "ionic-plugin-keyboard": {},
-            "cordova-universal-links-plugin": {}
+            "cordova-universal-links-plugin": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android",
