--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "angularfire2": "^4.0.0-rc.1",
+    "angularfire2": "5.0.0-rc.2",
     "build": "^0.1.4",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.4.0",
@@ -42,7 +42,7 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.0.4",
     "cordova-universal-links-plugin": "^1.2.1",
-    "firebase": "^4.2.0",
+    "firebase": "4.5.0",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
