--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
-    "ionic": "3.12.0",
+    "ionic": "^3.13.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
@@ -83,5 +83,7 @@
       "android",
       "ios"
     ]
-  }
+  },
+  "cordovaPlugins": [],
+  "cordovaPlatforms": []
 }
