--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/app-version": "^4.3.2",
     "@ionic-native/core": "3.12.1",
-    "@ionic-native/geofence": "^4.3.2",
+    "@ionic-native/geofence": "^4.4.0",
     "@ionic-native/geolocation": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
@@ -49,7 +49,7 @@
     "cordova-sqlite-storage": "^2.0.4",
     "cordova-universal-links-plugin": "^1.2.1",
     "es6-promise-plugin": "^4.1.1",
-    "firebase": "4.5.0",
+    "firebase": "^4.6.2",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
-    "ionic": "3.16.0",
+    "ionic": "3.18.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
@@ -84,11 +84,11 @@
       "ionic-plugin-keyboard": {},
       "cordova-universal-links-plugin": {},
       "cordova-sqlite-storage": {},
+      "cordova-plugin-app-version": {},
       "cordova-plugin-geofence": {
         "GEOFENCE_ALWAYS_USAGE_DESCRIPTION": "${EXECUTABLE_NAME} Would Like to Use Your Current Location Even In Background.",
         "GEOFENCE_IN_USE_USAGE_DESCRIPTION": "${EXECUTABLE_NAME} Would Like to Use Your Current Location When In Use."
-      },
-      "cordova-plugin-app-version": {}
+      }
     },
     "platforms": [
       "android",
