--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/app-version": "^4.3.2",
+    "@ionic-native/app-version": "^4.7.0",
     "@ionic-native/core": "3.12.1",
-    "@ionic-native/geofence": "^4.4.0",
-    "@ionic-native/geolocation": "^4.1.0",
+    "@ionic-native/geofence": "^4.7.0",
+    "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "angularfire2": "^5.0.0-rc.3",
+    "angularfire2": "^5.0.0-rc.5-next",
     "build": "^0.1.4",
     "cordova-android": "^6.2.3",
     "cordova-browser": "^4.1.0",
-    "cordova-ios": "^4.4.0",
-    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-browsertab": "^0.2.0",
     "cordova-plugin-buildinfo": "^1.1.0",
@@ -44,24 +44,24 @@
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.0.4",
+    "cordova-sqlite-storage": "^2.3.2",
     "cordova-universal-links-plugin": "^1.2.1",
-    "es6-promise-plugin": "^4.1.1",
-    "firebase": "^4.6.2",
+    "es6-promise-plugin": "^4.2.2",
+    "firebase": "^4.13.1",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "moment": "^2.18.1",
-    "promise-polyfill": "^6.0.2",
+    "moment": "^2.22.2",
+    "promise-polyfill": "^6.1.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
-    "ionic": "3.18.0",
+    "ionic": "3.20.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
@@ -92,8 +92,7 @@
     },
     "platforms": [
       "android",
-      "browser",
-      "ios"
+      "browser"
     ]
   },
   "cordovaPlugins": [],
