--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+secrets.ts
 *~
 *.sw[mnpcod]
 *.log
