--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "angularfire2": "^5.0.0-rc.5-next",
     "build": "^0.1.4",
     "cordova-android": "^6.2.3",
-    "cordova-browser": "^4.1.0",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "4.4.0",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-browsertab": "^0.2.0",
@@ -40,7 +39,6 @@
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-geofence": "^0.7.0",
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -48,7 +46,6 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.3.2",
     "cordova-universal-links-plugin": "^1.2.1",
-    "es6-promise-plugin": "^4.2.2",
     "firebase": "^4.13.1",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -84,15 +81,11 @@
       "ionic-plugin-keyboard": {},
       "cordova-universal-links-plugin": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-app-version": {},
-      "cordova-plugin-geofence": {
-        "GEOFENCE_ALWAYS_USAGE_DESCRIPTION": "${EXECUTABLE_NAME} Would Like to Use Your Current Location Even In Background.",
-        "GEOFENCE_IN_USE_USAGE_DESCRIPTION": "${EXECUTABLE_NAME} Would Like to Use Your Current Location When In Use."
-      }
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android",
-      "browser"
+      "ios"
     ]
   },
   "cordovaPlugins": [],
