--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/compiler-cli": "4.1.3",
     "@angular/core": "4.1.3",
     "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/app-version": "^4.7.0",
@@ -49,7 +48,7 @@
     "cordova-sqlite-storage": "^2.3.2",
     "cordova-universal-links-plugin": "^1.2.1",
     "firebase": "^4.13.1",
-    "ionic-angular": "3.6.0",
+    "ionic-angular": "^3.9.10",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
