--- a/package.json
+++ b/package.json
@@ -14,48 +14,49 @@
   },
   "dependencies": {
     "@angular/cli": "^11.2.2",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/app-version": "^4.7.0",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/geofence": "^4.7.0",
-    "@ionic-native/geolocation": "^4.7.0",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
-    "angularfire2": "^5.0.0-rc.5-next",
+    "@angular/common": "^11.2.3",
+    "@angular/compiler": "^11.2.3",
+    "@angular/compiler-cli": "^11.2.3",
+    "@angular/core": "^11.2.3",
+    "@angular/fire": "^6.1.4",
+    "@angular/forms": "^11.2.3",
+    "@angular/platform-browser": "^11.2.3",
+    "@angular/platform-browser-dynamic": "^11.2.3",
+    "@ionic-native/app-version": "^5.31.1",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/geofence": "^5.31.1",
+    "@ionic-native/geolocation": "^5.31.1",
+    "@ionic-native/splash-screen": "^5.31.1",
+    "@ionic-native/status-bar": "^5.31.1",
+    "@ionic/storage": "^2.3.1",
+    "angularfire2": "^5.4.2",
     "build": "^0.1.4",
     "cordova-android": "^6.2.3",
     "cordova-ios": "4.4.0",
-    "cordova-plugin-add-swift-support": "^1.7.2",
-    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-browsertab": "^0.2.0",
-    "cordova-plugin-buildinfo": "^1.1.0",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-customurlscheme": "^4.3.0",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-inappbrowser": "^1.7.1",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.3.2",
+    "cordova-plugin-buildinfo": "^4.0.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-customurlscheme": "^5.0.2",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^5.1.0",
     "cordova-universal-links-plugin": "^1.2.1",
-    "firebase": "^4.13.1",
+    "firebase": "^8.2.9",
     "ionic-angular": "^3.9.10",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "moment": "^2.22.2",
-    "promise-polyfill": "^6.1.0",
-    "rxjs": "5.4.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
+    "ionicons": "^5.5.0",
+    "moment": "^2.29.1",
+    "promise-polyfill": "^8.2.0",
+    "rxjs": "^6.6.6",
+    "sw-toolbox": "^3.6.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
