--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "angularfire2": "^5.4.2",
     "build": "^0.1.4",
     "cordova-android": "^6.2.3",
-    "cordova-ios": "4.4.0",
+    "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-browsertab": "^0.2.0",
@@ -59,7 +59,7 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
+    "@ionic/app-scripts": "^3.2.4",
     "ionic": "3.20.0",
     "typescript": "2.3.4"
   },
