--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
-    "ionic": "3.20.0",
-    "typescript": "2.3.4"
+    "@ionic/cli": "^6.13.1",
+    "ionic": "^5.4.16",
+    "typescript": "^4.2.2"
   },
   "description": "An Ionic project",
   "cordova": {
