--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/forms": "^11.2.3",
     "@angular/platform-browser": "^11.2.3",
     "@angular/platform-browser-dynamic": "^11.2.3",
+    "@angular/router": "^11.2.3",
     "@ionic-native/app-version": "^5.31.1",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/geofence": "^5.31.1",
     "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/splash-screen": "^5.31.1",
     "@ionic-native/status-bar": "^5.31.1",
+    "@ionic/angular": "^5.5.5",
+    "@ionic/angular-toolkit": "^3.1.0",
     "@ionic/storage": "^2.3.1",
     "angularfire2": "^5.4.2",
     "build": "^0.1.4",
@@ -49,7 +52,6 @@
     "cordova-sqlite-storage": "^5.1.0",
     "cordova-universal-links-plugin": "^1.2.1",
     "firebase": "^8.2.9",
-    "ionic-angular": "^3.9.10",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^5.5.0",
     "moment": "^2.29.1",
